--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <i class="fab fa-tiktok"></i>
       <span>観光スポット紹介</span>
     </a>
-    <a href="works.html" class="link-button" target="_blank">
+    <a href=" https://program-issa.github.io/portfolio/" class="link-button" target="_blank">
         <img src="IMG_7429.JPG" alt="作品集" />
         <span>作品集</span>
       </a>
